@@ -1,0 +1,29 @@
+package Monitoring::GLPlugin::SNMP::MibsAndOids::ARISTAENTITYSENSORMIB;
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::origin->{'ARISTA-ENTITY-SENSOR-MIB'} = {
+  url => '',
+  name => 'ARISTA-ENTITY-SENSOR-MIB',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mib_ids->{'ARISTA-ENTITY-SENSOR-MIB'} =
+    '1.3.6.1.4.1.30065.3.12';
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::mibs_and_oids->{'ARISTA-ENTITY-SENSOR-MIB'} = {
+  aristaEntSensorMIB => '1.3.6.1.4.1.30065.3.12',
+  aristaEntSensorMibNotifications => '1.3.6.1.4.1.30065.3.12.0',
+  aristaEntSensorMibObjects => '1.3.6.1.4.1.30065.3.12.1',
+  aristaEntSensorThresholdTable => '1.3.6.1.4.1.30065.3.12.1.1',
+  aristaEntSensorThresholdEntry => '1.3.6.1.4.1.30065.3.12.1.1.1',
+  aristaEntSensorThresholdLowWarning => '1.3.6.1.4.1.30065.3.12.1.1.1.1',
+  aristaEntSensorThresholdLowCritical => '1.3.6.1.4.1.30065.3.12.1.1.1.2',
+  aristaEntSensorThresholdHighWarning => '1.3.6.1.4.1.30065.3.12.1.1.1.3',
+  aristaEntSensorThresholdHighCritical => '1.3.6.1.4.1.30065.3.12.1.1.1.4',
+  aristaEntSensorStatusDescr => '1.3.6.1.4.1.30065.3.12.1.1.1.5',
+  aristaEntSensorMibConformance => '1.3.6.1.4.1.30065.3.12.2',
+  aristaEntSensorMibCompliances => '1.3.6.1.4.1.30065.3.12.2.1',
+  aristaEntSensorMibGroups => '1.3.6.1.4.1.30065.3.12.2.2',
+};
+
+$Monitoring::GLPlugin::SNMP::MibsAndOids::definitions->{'ARISTA-ENTITY-SENSOR-MIB'} = {
+};
+
