@@ -1,5 +1,7 @@
 * 2016-10-08 2.3.3
   add CISCOSB*
+  add ARISTA-ENTITY-SENSOR-MIB
+  add ENTITY-STATE-MIB
 * 2016-09-28 2.3.2.2
   update MANIFEST
 * 2016-09-28 2.3.2.1
